--- a/app.css
+++ b/app.css
@@ -65,17 +65,17 @@ body{
 }
 
 .user-icon{
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   position: relative;
   border-radius: 50%;
   background-size: contain;
-  background-image: url(http://419.bittenus.com/9/4/donkey.jpg);
+  background-image: url(https://i.ibb.co/ryJr0xF/Screenshot-20191214-234511.png);
 }
 
 .user-name{
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 32px;
+  margin-bottom: 32px;
   color: white;
 }
 
